src/test/ui/parser/keyword-as-as-identifier.stderr
error: expected pattern, found keyword `as`
  --> $DIR/keyword-as-as-identifier.rs:4:9
   |
LL |     let as = "foo";
   |         ^^ expected pattern

error: aborting due to previous error

